--- a/app/views/about/history.haml
+++ b/app/views/about/history.haml
@@ -82,7 +82,6 @@
                         %small John Wayne Elementary (PS 380), Brooklyn, NY
                     %li
                         %small Zenith Academy, Houston, TX
-
         .span7#panel-right
             .content
                 %h2 Our History
@@ -93,29 +92,29 @@
                     As experienced educators, they know that success in the classroom is a combination of many powerful factors and they designed a school to address each of those factors. Having worked at all levels of education, they were able to see what preparation for college looks like at every grade level. Their goal was to provide a place where
                     %i all families have the same platform for future success. 
                 %p Prodeo Academy opens its doors in Fall 2013 with 3 kindergarten classrooms. The projected growth pattern is to add a new kindergarten class of 66 students each year until capacity is reached, with grades K-8.
-                %p.lead The unique foundations of Prodeo Academy:
+                %h2 The unique foundations of Prodeo Academy:
                 %ul.unstyled
                     %li
-                        %span.lead
+                        %span
                             %b Careful planning:
                         Prodeo Academy's leaders spent two years doing careful planning, visiting, completing internships, teaching in the highest performing charter schools across the country, as well as building relationships throughout North Minneapolis and the broader community.
                     %br
                     %li
-                        %span.lead
+                        %span
                             %b Best practices:
                         Prodeo Academy uses the most effective, proven methods of teaching available. We have the freedom to implement only what works – no excuses.
                     %br
                     %li
-                        %span.lead
+                        %span
                             %b Partnerships:
                         Prodeo Academy is designed with the partnership and support of a diverse array of collaborators and advisors, from pre-schools to churches to universities.
                     %br
                     %li
-                        %span.lead
+                        %span
                             %b Achievement gap:
                         The founders of Prodeo Academy are inspired to demonstrate that the achievement gap in Minneapolis does not have to be permanent. All children, no matter what their income level, should have have an education that enables them to truly succeed. Therefore, the founders created a school in North Minneapolis that expects results from its students, teachers and families.
                     %br
                     %li
-                        %span.lead
+                        %span
                             %b Excellent teaching:
                         Knowing that high quality teaching is the most important factor in reducing the achievement gap, Prodeo Academy aims to hire only teachers with experience in the highest performing schools, teachers who clearly understand how to help kids reach their academic potential.
