--- a/app/views/about/who_we_are.haml
+++ b/app/views/about/who_we_are.haml
@@ -3,8 +3,9 @@
         .span12#panel-main
             .content
                 %h2 Who We Are
-                %p.lead
+                %p.center
                     Everything we do at Prodeo Academy, both in and out of the classroom, is based on our Five Core Values:
+                    %br
                     %b Knowledge, Conscientiousness, Compassion, Integrity,
                     and
                     %b Respect.
@@ -15,7 +16,8 @@
                     At Prodeo Academy, every student is engaged in learning. We provide individualized instruction for every child. Excellence is our standard, for both students and teachers. At Prodeo Academy we close the achievement gap by using the best practices in education from the top academic schools in the country. Results matter:
                     %i we strive to produce results that are among the highest performing schools in the country.
                     Together with our families, we provide a structure and culture of success.
-                %p.lead Want to know more?
+                %p
+                    %b Want to know more?
                 %p We invite you to learn more about our inspiring community by contacting Rick Campion, Executive Director.
                 %p rickcampion@prodeoacademy.org
                 %p (612) 559-4881
