Update board, partnerships -- change some tenses

--- a/app/views/approach/family_partnership.haml
+++ b/app/views/approach/family_partnership.haml
@@ -8,8 +8,8 @@
                         %p.lead Family support is critical to a child's success in school.
                         %p At Prodeo Academy we understand that we work in collaboration with families; we welcome every Prodeo Academy family to be an active participant in our school community.
                         %p.lead Our commitment to families:
-                        %p The high standards we set for our students are matched by the high standards we set for our staff. We are passionate about the high quality teachers we have hired who will provide your child with the tools to be successful.
-                        %p Our staff will be easily accessible to families, whether a student has a question about homework or a parent simply wants to reach out to the teacher.
-                        %p In addition to regular conferences, our teachers will communicate regularly with families through phone calls, home visits and meetings to ensure that each child is making solid progress at all times.
+                        %p The high standards we set for our students are matched by the high standards we set for our staff. We are passionate about the high quality teachers we have hired who provide your child with the tools to be successful.
+                        %p Our staff are easily accessible to families, whether a student has a question about homework or a parent simply wants to reach out to the teacher.
+                        %p In addition to regular conferences, our teachers communicate regularly with families through phone calls, home visits and meetings to ensure that each child is making solid progress at all times.
                     .span5
-                        %img.pull-right{:src => "/assets/placeholders/four.jpg"}
+                        %img.pull-right{:src => asset_path('approach/arianna.jpg')}
