--- a/app/views/about/board.haml
+++ b/app/views/about/board.haml
@@ -7,85 +7,32 @@
                 .row
                     .span12
                         %ul.thumbnails#board
-                            %li.span3
-                                .thumbnail
-                                    %img{:src => "/assets/board/john_alexander.png"}
-                                    .caption
-                                        %h4 John Alexander
-                                        %small Board Chair, Head of School, Groves Academy
-                            %li.span3
-                                .thumbnail
-                                    %img{:src => "/assets/board/kevin_cattoor.png"}
-                                    .caption
-                                        %h4 Kevin Cattoor
-                                        %small Treasurer, Founder, KC Consulting; CEO Skybridge Americas
-                            %li.span3
-                                .thumbnail
-                                    %img{:src => "/assets/board/tara_stone.png"}
-                                    .caption
-                                        %h4 Tara Stone
-                                        %small Community and Church Liaison, North Minneapolis
-                            %li.span3
-                                .thumbnail
-                                    %img{:src => "/assets/board/lidi_guzman.png"}
-                                    .caption
-                                        %h4 Lidibette Rosado-Guzm&aacute;n
-                                        %small Diversity Coordinator, World Language Teacher
-                            %li.span3
-                                .thumbnail
-                                    %img{:src => "/assets/board/jill_johnson.png"}
-                                    .caption
-                                        %h4 Jill Johnson
-                                        %small Board Secretary, Senior Business Analyst, Target
-                            %li.span3
-                                .thumbnail
-                                    %img{:src => "/assets/board/doug_jaeger.png"}
-                                    .caption
-                                        %h4 Doug Jeager
-                                        %small Former CEO of Adolfson & Peterson
-                            %li.span3
-                                .thumbnail
-                                    %img{:src => "/assets/board/chancey_anderson.png"}
-                                    .caption
-                                        %h4 Chancey Anderson
-                                        %small Co-Founder, Principal, Prodeo Academy; Lead Teacher, Uncommon
-                            %li.span3
-                                .thumbnail
-                                    %img{:src => "/assets/board/rick_campion.png"}
-                                    .caption
-                                        %h4 Rick Campion
-                                        %small Co-Founder, Executive Director, Prodeo Academy - Ex-Officio
+                            = render :partial => "board", :locals => {:name => "John Alexander", :role => "Board Chair, Head of School, Groves Academy"}
+                            = render :partial => "board", :locals => {:name => "Tara Stone", :role => "Community and Church Liaison, North Minneapolis"}
+                            = render :partial => "board", :locals => {:name => "Lidibette Rosado-Guzm&aacute;n", :role => "Diversity Coordinator, World Language Teacher"}
+                            = render :partial => "board", :locals => {:name => "Jill Johnson", :role => "Board Secretary, Senior Business Analyst, Target"}
+                            = render :partial => "board", :locals => {:name => "Doug Jeager", :role => "Treasurer, Former CEO of Adolfson & Peterson"}
+                            = render :partial => "board", :locals => {:name => "Chancey Anderson", :role => "Co-Founder, Principal, Prodeo Academy; Lead Teacher, Uncommon"}
+                            = render :partial => "board", :locals => {:name => "Rick Campion", :role => "Co-Founder, Executive Director, Prodeo Academy - Ex-Officio"}
                 %h2 Community Engagment Committe
                 .row
                     .span12
                         %ul.thumbnails#board
-                            %li.span3
-                                .thumbnail
-                                    %img{:src => "/assets/board/kerry_givens.png"}
-                                    .caption
-                                        %h4 Kerry Givens
-                                        %small Executive Director, South Minneapolis YMCA
-                            %li.span3
-                                .thumbnail
-                                    %img{:src => "/assets/board/neda_kellogg.png"}
-                                    .caption
-                                        %h4 Neda Kellogg
-                                        %small Founder and CEO, Project Diva
-                            %li.span3
-                                .thumbnail
-                                    %img{:src => "/assets/board/vidal_guzman.png"}
-                                    .caption
-                                        %h4 Vidal Guzm&aacute;n
-                                        %small Senior Manager at Public Radio International
+                            = render :partial => "board", :locals => {:name => "Kerry Givens", :role => "Executive Director, South Minneapolis YMCA"}
+                            = render :partial => "board", :locals => {:name => "Neda Kellogg", :role => "Founder and CEO, Project Diva"}
+                            = render :partial => "board", :locals => {:name => "Vidal Guzm&aacute;n", :role => "Senior Manager at Public Radio International"}
+                %h3 Board Meetings
+                .row
+                    .span12
                         %p
                             Our Board meets every fourth Wednesday of the month at 5:30pm at
                             %i 1555 40th Ave NE, Mpls, MN 55421
                         %p
                             The upcoming agenda and all past board minutes can be viewed on
-                            %a{:href => "https://drive.google.com/folderview?id=0B9F_q1nOg-J-ZDdzQVF3WWRRQU0&usp=sharing", :target => "_blank"} Google Docs
+                            %a{:href => "https://drive.google.com/folderview?id=0B9F_q1nOg-J-ZDdzQVF3WWRRQU0&usp=sharing#list", :target => "_blank"} Google Docs
                             by clicking
                             = succeed '.' do
-                                %a{:href => "https://drive.google.com/folderview?id=0B9F_q1nOg-J-ZDdzQVF3WWRRQU0&usp=sharing", :target => "_blank"} here
+                                %a{:href => "https://drive.google.com/folderview?id=0B9F_q1nOg-J-ZDdzQVF3WWRRQU0&usp=sharing#list", :target => "_blank"} here
                         %br
                         %p
                             %small Minnesota law requires that all chartered schools be authorized by an organization approved by the commissioner of education to be an authorizer.
@@ -96,4 +43,3 @@
                                 Persons interested in learning more about IQS and their oversight of Prodeo Academy may go to:
                                 %a{:href => "http://www.iqsmn.org/"} http://www.iqsmn.org
                                 or contact Robert Wedl, Managing Partner: bob@iqsmn.org or 612-501-9606
-                        %br
