--- a/app/views/student_life/community_meeting.haml
+++ b/app/views/student_life/community_meeting.haml
@@ -3,10 +3,11 @@
         .span12#panel-main
             .content
                 %h2 Community Meetings
-                %p We celebrate our values each week at our Community Meeting. Parents and visitors are always invited to attend. Come and see our values in action.
-                %p Community meetings take place in the gym every Friday from 12:20 - 12:50.
-                %h2 Spirit Stick
-                %p Each week, we choose one scholar who embodies the values of the week.  Meet our Spirit Stick Winners
+                %p Every Friday, the students and staff gather in the gym from 12:20pm-12:50pm for Community Meeting to celebrate the week.
+                %p Parents and visitors are always welcome to attend.
+                %h3 Spirit Stick
+                %p The highlight of the meeting is the awarding of the Spirit Stick. It is awarded to the student whose actions during the week best embodied the Prodeo Academy values.
+                %p This scholar proudly keeps the Spirit Stick in his or her classroom during the week and passes it on at the next Community Meeting.
                 %h3 January Winners
                 .row
                     .span12
@@ -20,6 +21,7 @@
                                 .thumbnail
                                     %img{:src => asset_path('student_life/winners/jan/2.jpg')}
                                     .caption
+                                        %h4 Frida
                 %h3 December Winners
                 .row
                     .span12
@@ -55,6 +57,6 @@
                                         %h4 Maurice
                             %li.span3
                                 .thumbnail
-                                    %img{:src => "//placehold.it/300x400"}
+                                    %img{:src => placehold(300, 400)}
                                     .caption
                                         %h4 Alan
