Add carousel images, fix tenses, rearrange top

--- a/app/views/about/board.haml
+++ b/app/views/about/board.haml
@@ -11,7 +11,7 @@
                             = render :partial => "board", :locals => {:name => "Tara Stone", :role => "Community and Church Liaison, North Minneapolis"}
                             = render :partial => "board", :locals => {:name => "Lidibette Rosado-Guzm&aacute;n", :role => "Diversity Coordinator, World Language Teacher"}
                             = render :partial => "board", :locals => {:name => "Jill Johnson", :role => "Board Secretary, Senior Business Analyst, Target"}
-                            = render :partial => "board", :locals => {:name => "Doug Jeager", :role => "Treasurer, Former CEO of Adolfson & Peterson"}
+                            = render :partial => "board", :locals => {:name => "Doug Jaeger", :role => "Treasurer, Former CEO of Adolfson & Peterson"}
                             = render :partial => "board", :locals => {:name => "Chancey Anderson", :role => "Co-Founder, Principal, Prodeo Academy; Lead Teacher, Uncommon"}
                             = render :partial => "board", :locals => {:name => "Rick Campion", :role => "Co-Founder, Executive Director, Prodeo Academy - Ex-Officio"}
                 %h2 Community Engagment Committe
