--- a/app/views/approach/core_values.haml
+++ b/app/views/approach/core_values.haml
@@ -14,7 +14,7 @@
                         %br
                         %br
                         %p.lead.center
-                            These five values will inform and inspire
+                            These five values inform and inspire
                             %br everything we do at Prodeo Academy.
                         %br
                         %p In Latin, Prodeo means "to advance" or "go forward", and at Prodeo Academy, we believe in the growth of the whole person.
