--- a/app/views/contact/apply_to_tutor.haml
+++ b/app/views/contact/apply_to_tutor.haml
@@ -7,7 +7,7 @@
             .content
                 %h2 Apply to Tutor
                 %p.lead
-                    All of the tutors at Prodeo Academy will be trained and will work collaboratively with specific teachers to support learning.
+                    All of the tutors at Prodeo Academy are trained and work collaboratively with specific teachers to support learning.
                     %br
                     %br
                     If you are interested in becoming a tutor at Prodeo Academy, we invite you to contact Chancey Anderson, Principal.
