--- a/app/views/results/achievement_gap.haml
+++ b/app/views/results/achievement_gap.haml
@@ -24,7 +24,7 @@
 
                 %p.mini-lead
                     %b The Teaching Gap:
-                %blockquote Our teachers are experienced professionals who have demonstrated success in helping students reach their full potential. Our teachers are fully committed to the shared values of the school and will hold themselves accountable for student achievement.
+                %blockquote Our teachers are experienced professionals who have demonstrated success in helping students reach their full potential. Our teachers are fully committed to the shared values of the school and hold themselves accountable for student achievement.
                 %br
 
                 %p.mini-lead
