--- a/app/views/results/results.haml
+++ b/app/views/results/results.haml
@@ -5,7 +5,7 @@
                 %h2 Meaningful and Measurable Results
                 .row
                     .span7
-                        %p Prodeo Academy is entering its first year of operation. Measurable results are the primary way we will define success.
+                        %p Prodeo Academy is entering its first year of operation. Measurable results are the primary way we define success.
                         %p We are excited about the tremendous growth our students have experienced since starting with us at the end of August. Less than 20% of our students came to us kindergarten ready, and after just over two months at Prodeo Academy, 85% of our scholars are on grade level and 62% of those are advanced.
                         %img{:src => asset_path('results/results.png')}
                     .span5
