--- a/app/views/student_life/academics.haml
+++ b/app/views/student_life/academics.haml
@@ -17,7 +17,7 @@
                     %u rigorous college preparatory curriculum,
                     with high expectations for all students and the support to help them meet those expectations. Based on
                     %u proven, successful methods of teaching
-                    at some of the highest performing schools in the country, the curriculum at Prodeo Academy will prepare each child for college beginning on the first day of kindergarten.
+                    at some of the highest performing schools in the country, the curriculum at Prodeo Academy prepares each child for college beginning on the first day of kindergarten.
                 %p Prodeo Academy uses research-based, proven curriculum - and we measure the results every step of the way.
                 %img.pull-left{:src => "/assets/placeholders/eleven.jpg"}
                 %p.lead  Focus on Literacy and Numeracy
