--- a/app/views/student_life/school_calendar.haml
+++ b/app/views/student_life/school_calendar.haml
@@ -22,7 +22,7 @@
                                     %td Student and Family Orientation
                                 %tr
                                     %td August 22, 2013
-                                    %td Kindergarten Orientation begins.  Kindergarteners will have half days on August 22nd through August 30th.
+                                    %td Kindergarten Orientation begins. Kindergarteners have half days on August 22nd through August 30th.
                                 %tr
                                     %td June 19, 2014
                                     %td Last day of school
@@ -33,6 +33,6 @@
         %button.close{:type => "button", :data => {:dismiss => "modal"}} x
         %h3 Lottery Information
     .modal-body
-        %p Kindergarten admission to Prodeo Academy is determined through a randomized lottery if the number of applicants exceeds the number of openings. A pre-determined number of spaces will be determined each year based on the school’s capacity.
-        %p The admission process shall be conducted through a randomized selection protocol until all lottery selections have been confirmed, at which point a wait list shall be maintained. The wait list will be in effect for the duration of the school year.
-        %p Once the wait list has been exhausted, open seats will be filled on a first-come first-served basis.
+        %p Kindergarten admission to Prodeo Academy is determined through a randomized lottery if the number of applicants exceeds the number of openings. A pre-determined number of spaces is determined each year based on the school’s capacity.
+        %p The admission process is conducted through a randomized selection protocol until all lottery selections have been confirmed, at which point a wait list is maintained. The wait list is then in effect for the duration of the school year.
+        %p Once the wait list has been exhausted, open seats are filled on a first-come first-served basis.
