--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -32,14 +32,15 @@ body {
 }
 
 #header {
-    padding-top: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 #nav {
-    margin-top: 0px;
+    margin-top: 55px;
     font-size: 15px;
     z-index: 1000;
-    margin-bottom: 10px;
+    margin-bottom: 0px;
 }
 
 ul.dropdown-menu {
@@ -105,7 +106,7 @@ ul.dropdown-menu li a:hover {
 	box-shadow: 0 5px 10px -5px #000;
 	position: relative;
 	z-index: 3;
-    width: 900px;
+    width: 940px;
 }
 
 .container#carousel {
@@ -121,7 +122,7 @@ ul.dropdown-menu li a:hover {
     top: 175px;
     padding-left: 40px;
     width: 900px;
-	z-index: 600;
+	z-index: 1000;
 }
 
 .carousel img {
@@ -168,10 +169,9 @@ ul.dropdown-menu li a:hover {
 }
 
 #social {
-    padding-bottom: 0;
-    height: 30px;
-    margin-top: 20px;
+    height: 20px;
     width: 250px;
+    margin-bottom: 0px;
 }
 
 #social #twitter {
