--- a/app/views/about/partners.haml
+++ b/app/views/about/partners.haml
@@ -9,5 +9,5 @@
                 %p.lead We are currently partnering with several preschools in order to help bridge the gap and provide our students with a smoother transition from preschool to kindergarten.
                 %p.mini-lead We are also currently partnering with several universities who have provided resources, volunteers, and tutors.
                 %p.mini-lead Furthermore, community resources have been an important connection.
-                %p.mini-lead We look to continue to develop partnerships that will help support our students and families and that will help us close the gap.
+                %p.mini-lead We look to continue to develop partnerships that help us support our students and families and close the gap.
                 = render :partial => "_partials/partners"
