--- a/app/views/application/index.haml
+++ b/app/views/application/index.haml
@@ -1,13 +1,14 @@
-.container#carousel
-    .carousel.slide
+.container
+    #carousel.carousel.slide
         .carousel-inner
-            .item.active
-                %img{:src => "/assets/index/carousel.jpg"}
-                .container
-                    .carousel-caption
-                        %h1 College Starts Here
-                        %p.lead Enroll your child today
-                        %a.btn.btn-large.btn-inverse{:href => "/assets/handout_two.pdf", :target => "_blank"} More info &raquo;
+            .container
+                .carousel-caption
+                    %h1 College Starts Here
+                    %p.lead Enroll your child today
+                    %a.btn.btn-large.btn-inverse{:href => "/about/who_we_are"} More info &raquo;
+            - (1..15).each do |i|
+                .item{:class => i == 1 ? 'active' : ''}
+                    %img{:src => asset_path("index/#{i}.jpg")}
 .container
     .row.center#index
         .span4
@@ -63,7 +64,7 @@
                             %a{:href => "#supporters", :data => {:toggle => "modal"}} Supporters
                         %li.divider
                         %li
-                            %a{:href => "#"} Invest
+                            %a{:href => "http://givemn.razoo.com/story/Education-Prodeo-Academy"} Invest
 #stay-in-touch.modal.hide.fade
     .modal-header
         %button.close{:type => "button", :data => {:dismiss => "modal"}} x
