--- a/app/views/application/index.haml
+++ b/app/views/application/index.haml
@@ -20,7 +20,7 @@
                         %span.caret
                     %ul.dropdown-menu
                         %li
-                            %a{:href => "/assets/handout_two.pdf", :target => "_blank"} Why choose Prodeo Academy?
+                            %a{:href => asset_path('handout_two.pdf'), :target => "_blank"} Why choose Prodeo Academy?
                         %li.divider
                         %li
                             %a{:href => "#"} Student Application
@@ -36,10 +36,10 @@
                         %span.caret
                     %ul.dropdown-menu
                         %li
-                            %a{:href => "/assets/handout_one.pdf", :target => "_blank"} Why choose Prodeo Academy?
+                            %a{:href => asset_path('handout_one.pdf'), :target => "_blank"} Why choose Prodeo Academy?
                         %li.divider
                         %li
-                            %a{:href => "/assets/handout_four.pdf"} Who we are looking for
+                            %a{:href => asset_path('handout_four.pdf')} Who we are looking for
                         %li.divider
                         %li
                             %a{:href => "/contact/apply_to_teach"} Apply to Teach
@@ -58,7 +58,7 @@
                         %span.caret
                     %ul.dropdown-menu
                         %li
-                            %a{:href => "/assets/handout_three.pdf", :target => "_blank"} Why choose Prodeo Academy?
+                            %a{:href => asset_path('handout_three.pdf'), :target => "_blank"} Why choose Prodeo Academy?
                         %li.divider
                         %li
                             %a{:href => "#supporters", :data => {:toggle => "modal"}} Supporters
