--- a/app/views/approach/vision.haml
+++ b/app/views/approach/vision.haml
@@ -19,4 +19,4 @@
                                 experience a college preparatory education and gain
                                 the tools to realize their full potential in life.
                     .span7
-                        %img{:src => "/assets/placeholders/one.jpg"}
+                        %img{:src => asset_path('placeholders/one.jpg')}
