--- a/app/views/student_life/school_calendar.haml
+++ b/app/views/student_life/school_calendar.haml
@@ -27,7 +27,7 @@
                                     %td June 19, 2014
                                     %td Last day of school
                     .span4
-                        %img{:src => "/assets/placeholders/six.jpg"}
+                        %img{:src => asset_path('placeholders/six.jpg')}
 #lottery-info.modal.hide.fade
     .modal-header
         %button.close{:type => "button", :data => {:dismiss => "modal"}} x
