--- a/app/views/about/_board.haml
+++ b/app/views/about/_board.haml
@@ -1,6 +1,6 @@
 %li.span3
     .thumbnail
-        %img{:src => "/assets/board/#{urlify(name)}.png"}
+        %img{:src => asset_path("board/#{urlify(name)}.png")}
         .caption
             %h4= name.html_safe
             %small= role
