--- a/app/views/approach/mission.haml
+++ b/app/views/approach/mission.haml
@@ -19,6 +19,6 @@
                                 %br
                                 positively and productively to society.
                     .span6
-                        %img{:src => "/assets/placeholders/nine.jpg"}
+                        %img{:src => asset_path('placeholders/nine.jpg')}
                         %br
                         %br
