--- a/app/views/contact/apply_to_teach.haml
+++ b/app/views/contact/apply_to_teach.haml
@@ -2,7 +2,7 @@
     .row
         .span4#panel-left
             .content
-                %img{:src => "/assets/placeholders/seven.jpg"}
+                %img{:src => asset_path('placeholders/seven.jpg')}
         .span8#panel-right
             .content
                 %h2 Apply to Teach
