--- a/app/views/contact/apply_to_tutor.haml
+++ b/app/views/contact/apply_to_tutor.haml
@@ -2,7 +2,7 @@
     .row
         .span4#panel-left
             .content
-                %img{:src => "/assets/placeholders/five.jpg"}
+                %img{:src => asset_path('placeholders/five.jpg')}
         .span8#panel-right
             .content
                 %h2 Apply to Tutor
