--- a/app/views/contact/volunteer.haml
+++ b/app/views/contact/volunteer.haml
@@ -2,7 +2,7 @@
     .row
         .span4#panel-left
             .content
-                %img{:src => "/assets/placeholders/three.jpg"}
+                %img{:src => asset_path('placeholders/three.jpg')}
         .span8#panel-right
             .content
                 %h2 Volunteer
