--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -10,7 +10,7 @@
             .row
                 .span4
                     %a#logo{:href => "/"}
-                        %img{:src => asset_path('logo')}
+                        %img{:src => asset_path('logo.png')}
                 .span8
                     .row
                         .well.well-small.pull-right#social
