Add Prodeo's custom images

--- a/app/views/approach/core_values.haml
+++ b/app/views/approach/core_values.haml
@@ -19,3 +19,7 @@
                         %br
                         %p In Latin, Prodeo means "to advance" or "go forward", and at Prodeo Academy, we believe in the growth of the whole person.
                         %p It is extremely important to prepare our students for success in school, as well as in their personal and future professional life. Building a foundation together with families, Prodeo Academy students and staff honor and embrace a learning environment founded upon five core values.
+                        %br
+                .row
+                    .span12
+                        %img{:src => asset_path('approach/core_values.jpg')}
