--- a/app/views/approach/mission.haml
+++ b/app/views/approach/mission.haml
@@ -4,7 +4,7 @@
             .content
                 %h2 The Prodeo Academy Mission
                 .row
-                    .span6
+                    .span5
                         %p.center.lead
                             %i
                                 Prodeo Academy is a college
@@ -18,7 +18,7 @@
                                 their opportunities to contribute
                                 %br
                                 positively and productively to society.
-                    .span6
-                        %img{:src => asset_path('placeholders/nine.jpg')}
+                    .span7
+                        %img{:src => asset_path('approach/mission.jpg')}
                         %br
                         %br
