--- a/app/views/approach/vision.haml
+++ b/app/views/approach/vision.haml
@@ -7,16 +7,30 @@
                     .span5
                         %p.center.lead
                             %i
-                                Prodeo Academy implements best practices
-                                from across the country to close the achievement gap.
+                                Prodeo Academy implements
                                 %br
+                                best practices from across the
                                 %br
-                                Prodeo Academy offers rigorous academics and individualized
-                                instruction in a joyful learning environment.
+                                country to close the achievement gap.
+                        %p.center.lead
+                            %i
+                                Prodeo Academy offers
                                 %br
+                                rigorous academics and
                                 %br
-                                Through this structure and culture, our students will
-                                experience a college preparatory education and gain
-                                the tools to realize their full potential in life.
+                                individualized instruction in a
+                                %br
+                                joyful learning environment.
+                        %p.center.lead
+                            %i
+                                Through this structure and
+                                %br
+                                culture, our students will experience
+                                %br
+                                a college preparatory education
+                                %br
+                                and gain the tools to realize
+                                %br
+                                their full potential in life.
                     .span7
-                        %img{:src => asset_path('placeholders/one.jpg')}
+                        %img{:src => asset_path('approach/vision.jpg')}
