--- a/app/views/contact/apply_to_tutor.haml
+++ b/app/views/contact/apply_to_tutor.haml
@@ -1,9 +1,9 @@
 .container
     .row
-        .span4#panel-left
+        .span5#panel-left
             .content
-                %img{:src => asset_path('placeholders/five.jpg')}
-        .span8#panel-right
+                %img{:src => asset_path('contact/tutor.jpg')}
+        .span7#panel-right
             .content
                 %h2 Apply to Tutor
                 %p.lead
