--- a/app/views/student_life/school_calendar.haml
+++ b/app/views/student_life/school_calendar.haml
@@ -14,8 +14,7 @@
                                 %tr
                                     %td Monday, June 17th, 2013
                                     %td
-                                        Lottery
-                                        %br
+                                        Lottery -
                                         %a{:href => "#lottery-info", :data => {:toggle => "modal"}} Click for lottery information
                                 %tr
                                     %td July, 2013
@@ -27,7 +26,7 @@
                                     %td June 19, 2014
                                     %td Last day of school
                     .span4
-                        %img{:src => asset_path('placeholders/six.jpg')}
+                        %img{:src => asset_path('student_life/calendar.jpg')}
 #lottery-info.modal.hide.fade
     .modal-header
         %button.close{:type => "button", :data => {:dismiss => "modal"}} x
