--- a/app/views/about/partners.haml
+++ b/app/views/about/partners.haml
@@ -2,7 +2,7 @@
     .row
         .span4#panel-left
             .content
-                %img{:src => asset_path('placeholders/eight.jpg')}
+                %img{:src => asset_path('about/partners.jpg')}
         .span8#panel-right
             .content
                 %h2 Our Partners
